--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sean Aminov — Software Developer</title>
   <meta name="description" content="Sean Aminov — CS student and software developer. Projects in Unreal Engine, Java/SQLite, Unity, and simulations." />
   <meta property="og:title" content="Sean Aminov — Software Developer" />
-  <meta property="og:description" content="Projects, experience, skills, and resume." />
+  <meta property="og:description" content="Projects, experience, skills, and Unreal Engine learning journey." />
   <meta property="og:type" content="website" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -14,7 +14,6 @@
 </head>
 <body>
   <canvas id="stars" aria-hidden="true"></canvas>
-
   <a class="skip-link" href="#about">Skip to content</a>
 
   <header class="site-header">
@@ -27,29 +26,21 @@
       <a href="#about">about</a>
       <a href="#journey">journey</a>
       <a href="#projects">projects</a>
+      <a href="#unreal">unreal</a>
       <a href="#skills">skills</a>
       <a href="#contact">contact</a>
       <a href="assets/Sean_Aminov_Resume.pdf" target="_blank" rel="noopener" class="nav-resume" aria-label="Open resume in a new tab">resume</a>
     </nav>
 
     <div class="social">
-      <!-- LinkedIn -->
       <a class="icon-btn" href="https://linkedin.com/in/sean-aminov" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-          <path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.1c.5-1 1.8-2.1 3.8-2.1 4.1 0 4.9 2.7 4.9 6.3V23h-4v-6.5c0-1.6 0-3.7-2.3-3.7-2.3 0-2.6 1.8-2.6 3.6V23h-3.8V8.5z"/>
-        </svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.1c.5-1 1.8-2.1 3.8-2.1 4.1 0 4.9 2.7 4.9 6.3V23h-4v-6.5c0-1.6 0-3.7-2.3-3.7-2.3 0-2.6 1.8-2.6 3.6V23h-3.8V8.5z"/></svg>
       </a>
-      <!-- GitHub -->
       <a class="icon-btn" href="https://github.com/SeanAminov" target="_blank" rel="noopener" aria-label="GitHub">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-          <path fill="currentColor" d="M12 .5a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.5-1.5-1.9-1.5-1.9-1.2-.8.1-.8.1-.8 1.3.1 2 1.3 2 1.3 1.2 2 3.2 1.4 3.9 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.6 1.3-3.5-.1-.3-.6-1.7.1-3.5 0 0 1-.3 3.6 1.3a12.5 12.5 0 0 1 6.6 0c2.6-1.6 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2.1 1.3 3.5 0 4.8-2.9 5.9-5.6 6.2.5.5 1 1.3 1 2.6v3.8c0 .3.2.7.8.6A12 12 0 0 0 12 .5z"/>
-        </svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.5-1.5-1.9-1.5-1.9-1.2-.8.1-.8.1-.8 1.3.1 2 1.3 2 1.3 1.2 2 3.2 1.4 3.9 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.6 1.3-3.5-.1-.3-.6-1.7.1-3.5 0 0 1-.3 3.6 1.3a12.5 12.5 0 0 1 6.6 0c2.6-1.6 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2.1 1.3 3.5 0 4.8-2.9 5.9-5.6 6.2.5.5 1 1.3 1 2.6v3.8c0 .3.2.7.8.6A12 12 0 0 0 12 .5z"/></svg>
       </a>
-      <!-- Email -->
       <a class="icon-btn" href="mailto:sean.aminovs@gmail.com" aria-label="Email">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
-          <path fill="currentColor" d="M12 13 2 6.76V18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6.76L12 13z"/><path fill="currentColor" d="M22 6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2l10 6 10-6z"/>
-        </svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M12 13 2 6.76V18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6.76L12 13z"/><path fill="currentColor" d="M22 6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2l10 6 10-6z"/></svg>
       </a>
     </div>
   </header>
@@ -69,7 +60,7 @@
       </div>
     </section>
 
-    <!-- ABOUT / EDUCATION -->
+    <!-- ABOUT -->
     <section id="about" class="section">
       <h2 class="section-title">about</h2>
       <p class="lede">
@@ -85,10 +76,9 @@
       </div>
     </section>
 
-    <!-- JOURNEY / EXPERIENCE TIMELINE -->
+    <!-- JOURNEY -->
     <section id="journey" class="section">
       <h2 class="section-title">journey</h2>
-
       <ol class="timeline">
         <li class="tl-item">
           <div class="tl-node"></div>
@@ -119,15 +109,28 @@
             </ul>
           </div>
         </li>
+
+        <li class="tl-item">
+          <div class="tl-node"></div>
+          <div class="tl-card">
+            <header>
+              <h3>National Honor Society (NHS) — Officer</h3>
+              <span class="meta">Los Altos, California • Aug 2021 – Jun 2023</span>
+            </header>
+            <ul>
+              <li>Served as an officer in the school’s largest student organization; supported <strong>500+ students</strong> with volunteer‑hour tracking and coordination.</li>
+              <li>Built and maintained <strong>spreadsheets</strong> for analysis and formatting to streamline hour verification and reporting.</li>
+              <li>Planned student‑driven activities with peers to organize community events and service projects; volunteered in local initiatives.</li>
+            </ul>
+          </div>
+        </li>
       </ol>
     </section>
 
     <!-- PROJECTS -->
     <section id="projects" class="section">
       <h2 class="section-title">projects</h2>
-
       <div class="grid">
-        <!-- Close Quarter Battle -->
         <article class="card project">
           <header class="project-head">
             <h3>Close Quarter Battle</h3>
@@ -141,7 +144,6 @@
           </ul>
         </article>
 
-        <!-- Clever Cash -->
         <article class="card project">
           <header class="project-head">
             <h3>Clever Cash</h3>
@@ -154,7 +156,6 @@
           </ul>
         </article>
 
-        <!-- RPG Adventure -->
         <article class="card project">
           <header class="project-head">
             <h3>RPG Adventure</h3>
@@ -167,7 +168,6 @@
           </ul>
         </article>
 
-        <!-- Elevator Simulation -->
         <article class="card project">
           <header class="project-head">
             <h3>Elevator Simulation</h3>
@@ -183,10 +183,79 @@
       </div>
     </section>
 
+    <!-- UNREAL ENGINE JOURNEY -->
+    <section id="unreal" class="section">
+      <h2 class="section-title">unreal engine journey</h2>
+
+      <div class="ue-two">
+        <div class="card ue-summary">
+          <h3>What I’ve been learning</h3>
+          <ul>
+            <li>Principles of single‑player and multiplayer <strong>level design</strong>.</li>
+            <li>Creating detailed <strong>Level Design Documents (LDDs)</strong> to collaborate and communicate ideas.</li>
+            <li><strong>Greyboxing</strong> and prototyping gameplay spaces in Unreal Engine.</li>
+            <li>Lighting, traversal, and gameplay mechanics to bring designs to life.</li>
+          </ul>
+          <p class="meta">I’m <strong>3/7</strong> courses into the Coursera Unreal path and working on the 4th now.</p>
+
+          <div class="progress" data-complete="3" data-total="7" aria-label="Unreal course progress">
+            <div class="progress__bar" style="width:0%"></div>
+            <div class="progress__txt" aria-hidden="true">3 / 7</div>
+          </div>
+
+          <p class="ue-links">
+            <a class="btn" href="https://www.coursera.org/learn/unreal-engine-fundamentals" target="_blank" rel="noopener">Course website ↗</a>
+            <a class="btn" href="https://lnkd.in/gBNQkKQu" target="_blank" rel="noopener">My LinkedIn post ↗</a>
+          </p>
+        </div>
+
+        <div class="card ue-video">
+          <h3>showcase video</h3>
+          <div class="video-embed">
+            <iframe src="https://www.youtube.com/embed/ZvlV5WwMoaU" title="Unreal progress video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <p class="meta">Short demo of what I’ve learned so far.</p>
+        </div>
+      </div>
+
+      <div class="ue-grid">
+        <figure class="ue-cert">
+          <img src="assets/certs/ue-fundamentals.jpg" alt="Coursera certificate: Unreal Engine Fundamentals" />
+          <figcaption>Unreal Engine Fundamentals (Coursera)</figcaption>
+        </figure>
+        <figure class="ue-cert">
+          <img src="assets/certs/intro-to-game-design.jpg" alt="Coursera certificate: Introduction to Game Design" />
+          <figcaption>Introduction to Game Design (Coursera)</figcaption>
+        </figure>
+        <figure class="ue-cert">
+          <img src="assets/certs/ue-level-design-fundamentals.jpg" alt="Coursera certificate: Fundamentals of Level Design with Unreal Engine" />
+          <figcaption>Fundamentals of Level Design with UE (Coursera)</figcaption>
+        </figure>
+      </div>
+
+      <article class="card ue-spotlight">
+        <header class="project-head">
+          <h3>Spotlight: Operation “Rose House” — CQB Mission</h3>
+          <span class="stack">UE5 • Level Design • Systems & Narrative</span>
+        </header>
+        <ul>
+          <li>Two‑story residential <strong>night</strong> mission with rain; stealthy approach and vertical play. :contentReference[oaicite:2]{index=2}</li>
+          <li><strong>Primary objectives</strong>: secure an encrypted data chip (study/office) and rescue a basement hostage. :contentReference[oaicite:3]{index=3}</li>
+          <li>Signature mechanic: <strong>grapple insertion</strong> via second‑floor window; optional office bypass or breach. :contentReference[oaicite:4]{index=4}</li>
+          <li>Core CQB tools and <strong>limited HUD</strong> for realism; flashbangs, smoke, and melee utility. :contentReference[oaicite:5]{index=5}</li>
+          <li>Design pillars: <em>Realism & consequence</em>, <em>player freedom</em>, and <em>tactical progression</em>. :contentReference[oaicite:6]{index=6}</li>
+        </ul>
+
+        <p class="ue-docs">
+          <a class="btn" href="assets/docs/Level_Design_Document_CQB.pdf" target="_blank" rel="noopener">Read the Level Design Document (PDF)</a>
+          <a class="btn" href="assets/docs/CQB_Game_Design.pdf" target="_blank" rel="noopener">View the Game Design deck (PDF)</a>
+        </p>
+      </article>
+    </section>
+
     <!-- SKILLS -->
     <section id="skills" class="section">
       <h2 class="section-title">technical skills</h2>
-
       <div class="skills-grid">
         <div>
           <h3>Programming</h3>
@@ -194,21 +263,18 @@
             <span class="badge">Java</span><span class="badge">C++</span><span class="badge">C#</span><span class="badge">C</span>
           </div>
         </div>
-
         <div>
           <h3>Game Engines</h3>
           <div class="badges">
             <span class="badge">Unreal Engine 5</span><span class="badge">Unity</span>
           </div>
         </div>
-
         <div>
           <h3>Tools</h3>
           <div class="badges">
             <span class="badge">Git</span><span class="badge">GitHub</span><span class="badge">Visual Studio</span><span class="badge">SQLite</span><span class="badge">Perforce</span>
           </div>
         </div>
-
         <div>
           <h3>Relevant Coursework</h3>
           <div class="badges">
@@ -238,5 +304,12 @@
   <footer class="site-footer">
     <p>© <span id="year"></span> Sean Aminov • Built with HTML/CSS/JS • Hosted on GitHub Pages</p>
   </footer>
+
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox" aria-hidden="true" role="dialog" aria-label="Image viewer">
+    <button class="lightbox__close" aria-label="Close">×</button>
+    <img class="lightbox__img" alt="">
+    <div class="lightbox__caption"></div>
+  </div>
 </body>
 </html>
