--- a/index.html
+++ b/index.html
@@ -33,14 +33,23 @@
     </nav>
 
     <div class="social">
+      <!-- LinkedIn -->
       <a class="icon-btn" href="https://linkedin.com/in/sean-aminov" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.1c.5-1 1.8-2.1 3.8-2.1 4.1 0 4.9 2.7 4.9 6.3V23h-4v-6.5c0-1.6 0-3.7-2.3-3.7-2.3 0-2.6 1.8-2.6 3.6V23h-3.8V8.5z"/></svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
+          <path fill="currentColor" d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8.5h4V23h-4V8.5zM8.5 8.5h3.8v2h.1c.5-1 1.8-2.1 3.8-2.1 4.1 0 4.9 2.7 4.9 6.3V23h-4v-6.5c0-1.6 0-3.7-2.3-3.7-2.3 0-2.6 1.8-2.6 3.6V23h-3.8V8.5z"/>
+        </svg>
       </a>
+      <!-- GitHub -->
       <a class="icon-btn" href="https://github.com/SeanAminov" target="_blank" rel="noopener" aria-label="GitHub">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.5-1.5-1.9-1.5-1.9-1.2-.8.1-.8.1-.8 1.3.1 2 1.3 2 1.3 1.2 2 3.2 1.4 3.9 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.6 1.3-3.5-.1-.3-.6-1.7.1-3.5 0 0 1-.3 3.6 1.3a12.5 12.5 0 0 1 6.6 0c2.6-1.6 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2.1 1.3 3.5 0 4.8-2.9 5.9-5.6 6.2.5.5 1 1.3 1 2.6v3.8c0 .3.2.7.8.6A12 12 0 0 0 12 .5z"/></svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
+          <path fill="currentColor" d="M12 .5a12 12 0 0 0-3.8 23.4c.6.1.8-.3.8-.6v-2.2c-3.3.7-4-1.6-4-1.6-.6-1.5-1.5-1.9-1.5-1.9-1.2-.8.1-.8.1-.8 1.3.1 2 1.3 2 1.3 1.2 2 3.2 1.4 3.9 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.6 1.3-3.5-.1-.3-.6-1.7.1-3.5 0 0 1-.3 3.6 1.3a12.5 12.5 0 0 1 6.6 0c2.6-1.6 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2.1 1.3 3.5 0 4.8-2.9 5.9-5.6 6.2.5.5 1 1.3 1 2.6v3.8c0 .3.2.7.8.6A12 12 0 0 0 12 .5z"/>
+        </svg>
       </a>
+      <!-- Email -->
       <a class="icon-btn" href="mailto:sean.aminovs@gmail.com" aria-label="Email">
-        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true"><path fill="currentColor" d="M12 13 2 6.76V18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6.76L12 13z"/><path fill="currentColor" d="M22 6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2l10 6 10-6z"/></svg>
+        <svg viewBox="0 0 24 24" width="22" height="22" aria-hidden="true">
+          <path fill="currentColor" d="M12 13 2 6.76V18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6.76L12 13z"/><path fill="currentColor" d="M22 6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2l10 6 10-6z"/>
+        </svg>
       </a>
     </div>
   </header>
@@ -192,11 +201,11 @@
           <h3>What I’ve been learning</h3>
           <ul>
             <li>Principles of single‑player and multiplayer <strong>level design</strong>.</li>
-            <li>Creating detailed <strong>Level Design Documents (LDDs)</strong> to collaborate and communicate ideas.</li>
+            <li>Creating detailed <strong>Level Design Documents (LDDs)</strong> for collaboration.</li>
             <li><strong>Greyboxing</strong> and prototyping gameplay spaces in Unreal Engine.</li>
             <li>Lighting, traversal, and gameplay mechanics to bring designs to life.</li>
           </ul>
-          <p class="meta">I’m <strong>3/7</strong> courses into the Coursera Unreal path and working on the 4th now.</p>
+          <p class="meta">Progress: <strong>3/7</strong> courses complete • currently working on the 4th.</p>
 
           <div class="progress" data-complete="3" data-total="7" aria-label="Unreal course progress">
             <div class="progress__bar" style="width:0%"></div>
@@ -205,7 +214,6 @@
 
           <p class="ue-links">
             <a class="btn" href="https://www.coursera.org/learn/unreal-engine-fundamentals" target="_blank" rel="noopener">Course website ↗</a>
-            <a class="btn" href="https://lnkd.in/gBNQkKQu" target="_blank" rel="noopener">My LinkedIn post ↗</a>
           </p>
         </div>
 
@@ -218,34 +226,46 @@
         </div>
       </div>
 
+      <!-- Certificate gallery -->
       <div class="ue-grid">
         <figure class="ue-cert">
-          <img src="assets/certs/ue-fundamentals.jpg" alt="Coursera certificate: Unreal Engine Fundamentals" />
+          <img loading="lazy"
+               src="assets/certs/ue-fundamentals.jpg"
+               data-full="assets/certs/ue-fundamentals.jpg"
+               alt="Coursera certificate: Unreal Engine Fundamentals" />
           <figcaption>Unreal Engine Fundamentals (Coursera)</figcaption>
         </figure>
+
         <figure class="ue-cert">
-          <img src="assets/certs/intro-to-game-design.jpg" alt="Coursera certificate: Introduction to Game Design" />
+          <img loading="lazy"
+               src="assets/certs/intro-to-game-design.jpg"
+               data-full="assets/certs/intro-to-game-design.jpg"
+               alt="Coursera certificate: Introduction to Game Design" />
           <figcaption>Introduction to Game Design (Coursera)</figcaption>
         </figure>
+
         <figure class="ue-cert">
-          <img src="assets/certs/ue-level-design-fundamentals.jpg" alt="Coursera certificate: Fundamentals of Level Design with Unreal Engine" />
+          <img loading="lazy"
+               src="assets/certs/ue-level-design-fundamentals.jpg"
+               data-full="assets/certs/ue-level-design-fundamentals.jpg"
+               alt="Coursera certificate: Fundamentals of Level Design with Unreal Engine" />
           <figcaption>Fundamentals of Level Design with UE (Coursera)</figcaption>
         </figure>
       </div>
 
+      <!-- Spotlight (general, WIP copy) -->
       <article class="card ue-spotlight">
         <header class="project-head">
-          <h3>Spotlight: Operation “Rose House” — CQB Mission</h3>
-          <span class="stack">UE5 • Level Design • Systems & Narrative</span>
+          <h3>Spotlight — Operation “Rose House” (WIP)</h3>
+          <span class="stack">UE5 • CQB Level • Design & Systems</span>
         </header>
-        <ul>
-          <li>Two‑story residential <strong>night</strong> mission with rain; stealthy approach and vertical play. :contentReference[oaicite:2]{index=2}</li>
-          <li><strong>Primary objectives</strong>: secure an encrypted data chip (study/office) and rescue a basement hostage. :contentReference[oaicite:3]{index=3}</li>
-          <li>Signature mechanic: <strong>grapple insertion</strong> via second‑floor window; optional office bypass or breach. :contentReference[oaicite:4]{index=4}</li>
-          <li>Core CQB tools and <strong>limited HUD</strong> for realism; flashbangs, smoke, and melee utility. :contentReference[oaicite:5]{index=5}</li>
-          <li>Design pillars: <em>Realism & consequence</em>, <em>player freedom</em>, and <em>tactical progression</em>. :contentReference[oaicite:6]{index=6}</li>
-        </ul>
-
+        <p>
+          I’m building a first‑person <strong>close‑quarters battle</strong> mission in a two‑story suburban home with a basement.
+          The goal is to balance <em>realism</em> and <em>player choice</em>: multiple insertion routes, methodical room clearing,
+          and a mix of stealth and action. Players navigate tight interiors, secure critical intel, and attempt a hostage
+          rescue under pressure. The level emphasizes clear objectives, readable spaces, and cinematic pacing from approach
+          to exfiltration.
+        </p>
         <p class="ue-docs">
           <a class="btn" href="assets/docs/Level_Design_Document_CQB.pdf" target="_blank" rel="noopener">Read the Level Design Document (PDF)</a>
           <a class="btn" href="assets/docs/CQB_Game_Design.pdf" target="_blank" rel="noopener">View the Game Design deck (PDF)</a>
@@ -260,7 +280,11 @@
         <div>
           <h3>Programming</h3>
           <div class="badges">
-            <span class="badge">Java</span><span class="badge">C++</span><span class="badge">C#</span><span class="badge">C</span>
+            <span class="badge">Java</span>
+            <span class="badge">C++</span>
+            <span class="badge">C#</span>
+            <span class="badge">C</span>
+            <span class="badge">HTML</span>
           </div>
         </div>
         <div>
