--- a/index.html
+++ b/index.html
@@ -5,31 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sean Aminov — Software Developer</title>
   <meta name="description" content="Sean Aminov — CS student and software developer. Projects in Unreal Engine, Java/SQLite, Unity, and simulations." />
+  <meta name="theme-color" content="#0b0f14" />
+
+  <!-- Favicon / App Icons -->
+  <link rel="icon" href="assets/favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/favicon.png" />
   <meta property="og:title" content="Sean Aminov — Software Developer" />
   <meta property="og:description" content="Projects, experience, skills, and Unreal Engine learning journey." />
   <meta property="og:type" content="website" />
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
   <canvas id="stars" aria-hidden="true"></canvas>
-  <a class="skip-link" href="#about">Skip to content</a>
+  <a class="skip-link" href="#about">Skip to Content</a>
 
   <header class="site-header">
     <div class="brand">
       <span class="logo-dot" aria-hidden="true"></span>
-      <a href="#top" class="brand-name">sean aminov</a>
+      <a href="#top" class="brand-name">Sean Aminov</a>
     </div>
 
     <nav class="site-nav" aria-label="Primary">
-      <a href="#about">about</a>
-      <a href="#journey">journey</a>
-      <a href="#projects">projects</a>
-      <a href="#unreal">unreal</a>
-      <a href="#skills">skills</a>
-      <a href="#contact">contact</a>
-      <a href="assets/Sean_Aminov_Resume.pdf" target="_blank" rel="noopener" class="nav-resume" aria-label="Open resume in a new tab">resume</a>
+      <a href="#about">About</a>
+      <a href="#journey">Journey</a>
+      <a href="#projects">Projects</a>
+      <a href="#unreal">Unreal</a>
+      <a href="#skills">Skills</a>
+      <a href="#contact">Contact</a>
+      <a href="assets/Sean_Aminov_Resume.pdf" target="_blank" rel="noopener" class="nav-resume" aria-label="Open resume in a new tab">Resume</a>
     </nav>
 
     <div class="social">
@@ -58,20 +64,20 @@
     <!-- HERO -->
     <section class="hero">
       <div class="hero-inner">
-        <h1>hi, i’m sean!</h1>
-        <p class="subtitle">software developer • cs student • tech enthusiast</p>
+        <h1>Hi, I’m Sean.</h1>
+        <p class="subtitle">Software Developer • CS Student • Tech Enthusiast</p>
         <div class="cta-row">
-          <a class="btn btn-primary" href="assets/Sean_Aminov_Resume.pdf" target="_blank" rel="noopener">open resume ↗</a>
-          <a class="btn" href="https://linkedin.com/in/sean-aminov" target="_blank" rel="noopener">linkedin</a>
-          <a class="btn" href="https://github.com/SeanAminov" target="_blank" rel="noopener">github</a>
+          <a class="btn btn-primary" href="assets/Sean_Aminov_Resume.pdf" target="_blank" rel="noopener">Open Resume ↗</a>
+          <a class="btn" href="https://linkedin.com/in/sean-aminov" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn" href="https://github.com/SeanAminov" target="_blank" rel="noopener">GitHub</a>
         </div>
-        <a href="#journey" class="follow-link">follow my career →</a>
+        <a href="#journey" class="follow-link">Follow My Career →</a>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section id="about" class="section">
-      <h2 class="section-title">about</h2>
+      <h2 class="section-title">About</h2>
       <p class="lede">
         I’m a Computer Science student at San Jose State University (B.S., expected May 2027) based in San Jose, CA.
         I love building interactive experiences—from games in Unreal/Unity to practical apps in Java and SQLite.
@@ -80,14 +86,14 @@
       <div class="card edu">
         <h3>San Jose State University — B.S. in Computer Science</h3>
         <p class="meta">San Jose, California • Expected May 2027</p>
-        <p><strong>Relevant coursework:</strong> Object Oriented Programming, Data Structures and Algorithms, Computer Systems,
+        <p><strong>Relevant Coursework:</strong> Object Oriented Programming, Data Structures and Algorithms, Computer Systems,
         Computer Graphics, Discrete Mathematics, Linear Algebra, Calculus II, Calculus III.</p>
       </div>
     </section>
 
     <!-- JOURNEY -->
     <section id="journey" class="section">
-      <h2 class="section-title">journey</h2>
+      <h2 class="section-title">Journey</h2>
       <ol class="timeline">
         <li class="tl-item">
           <div class="tl-node"></div>
@@ -112,7 +118,7 @@
               <span class="meta">Los Altos, California • Jun 2021 – Jun 2023</span>
             </header>
             <ul>
-              <li>Managed camper check‑in, activities, and meals to ensure a smooth daily camp experience.</li>
+              <li>Managed camper check-in, activities, and meals to ensure a smooth daily camp experience.</li>
               <li>Facilitated instruction by engaging students to keep them interested in class.</li>
               <li>Created lesson plans that kept students focused and on track.</li>
             </ul>
@@ -127,9 +133,9 @@
               <span class="meta">Los Altos, California • Aug 2021 – Jun 2023</span>
             </header>
             <ul>
-              <li>Served as an officer in the school’s largest student organization; supported <strong>500+ students</strong> with volunteer‑hour tracking and coordination.</li>
+              <li>Served as an officer in the school’s largest student organization; supported <strong>500+ students</strong> with volunteer-hour tracking and coordination.</li>
               <li>Built and maintained <strong>spreadsheets</strong> for analysis and formatting to streamline hour verification and reporting.</li>
-              <li>Planned student‑driven activities with peers to organize community events and service projects; volunteered in local initiatives.</li>
+              <li>Planned student-driven activities with peers to organize community events and service projects; volunteered in local initiatives.</li>
             </ul>
           </div>
         </li>
@@ -138,7 +144,7 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="section">
-      <h2 class="section-title">projects</h2>
+      <h2 class="section-title">Projects</h2>
       <div class="grid">
         <article class="card project">
           <header class="project-head">
@@ -147,8 +153,8 @@
             <span class="meta">Game Designer • San Jose, CA • Jul 2025 – Sep 2025</span>
           </header>
           <ul>
-            <li>Designed and developed a first‑person close‑quarters battle simulator in Unreal Engine 5, handling gameplay, level creation, and combat systems.</li>
-            <li>Built AI‑driven opponents and modular levels to simulate realistic tactical scenarios and improve replayability.</li>
+            <li>Designed and developed a first-person close-quarters battle simulator in Unreal Engine 5, handling gameplay, level creation, and combat systems.</li>
+            <li>Built AI-driven opponents and modular levels to simulate realistic tactical scenarios and improve replayability.</li>
             <li>Optimized performance via profiling, asset management, and scalable design for smooth play on varied hardware.</li>
           </ul>
         </article>
@@ -161,7 +167,7 @@
           </header>
           <ul>
             <li>Built a free personal budgeting desktop app with a team of four; implemented SQLite for durable data storage and retrieval.</li>
-            <li>Led three teammates with a clear project plan, detailed write‑ups, and a timeline that kept delivery on track.</li>
+            <li>Led three teammates with a clear project plan, detailed write-ups, and a timeline that kept delivery on track.</li>
           </ul>
         </article>
 
@@ -173,7 +179,7 @@
           </header>
           <ul>
             <li>Contributed backend systems for a 2D RPG in Unity.</li>
-            <li>Leveled up C# proficiency and game‑design fundamentals while shipping features.</li>
+            <li>Leveled up C# proficiency and game-design fundamentals while shipping features.</li>
           </ul>
         </article>
 
@@ -184,7 +190,7 @@
             <span class="meta">Backend Developer • Los Altos, CA • Sep 2022 – Dec 2022</span>
           </header>
           <ul>
-            <li>Built an event‑driven simulation modeling elevator behavior.</li>
+            <li>Built an event-driven simulation modeling elevator behavior.</li>
             <li>Collaborated closely with teammates and instructor to ship components on schedule and with quality.</li>
             <li>Modeled processes using finite state machines and queues.</li>
           </ul>
@@ -194,18 +200,18 @@
 
     <!-- UNREAL ENGINE JOURNEY -->
     <section id="unreal" class="section">
-      <h2 class="section-title">unreal engine journey</h2>
+      <h2 class="section-title">Unreal Engine Journey</h2>
 
       <div class="ue-two">
         <div class="card ue-summary">
-          <h3>What I’ve been learning</h3>
+          <h3>What I’ve Been Learning</h3>
           <ul>
-            <li>Principles of single‑player and multiplayer <strong>level design</strong>.</li>
+            <li>Principles of single-player and multiplayer <strong>level design</strong>.</li>
             <li>Creating detailed <strong>Level Design Documents (LDDs)</strong> for collaboration.</li>
             <li><strong>Greyboxing</strong> and prototyping gameplay spaces in Unreal Engine.</li>
             <li>Lighting, traversal, and gameplay mechanics to bring designs to life.</li>
           </ul>
-          <p class="meta">Progress: <strong>3/7</strong> courses complete • currently working on the 4th.</p>
+          <p class="meta">Progress: <strong>3/7</strong> courses complete • Currently working on the 4th.</p>
 
           <div class="progress" data-complete="3" data-total="7" aria-label="Unreal course progress">
             <div class="progress__bar" style="width:0%"></div>
@@ -213,12 +219,12 @@
           </div>
 
           <p class="ue-links">
-            <a class="btn" href="https://www.coursera.org/learn/unreal-engine-fundamentals" target="_blank" rel="noopener">Course website ↗</a>
+            <a class="btn" href="https://www.coursera.org/learn/unreal-engine-fundamentals" target="_blank" rel="noopener">Course Website ↗</a>
           </p>
         </div>
 
         <div class="card ue-video">
-          <h3>showcase video</h3>
+          <h3>Showcase Video</h3>
           <div class="video-embed">
             <iframe src="https://www.youtube.com/embed/ZvlV5WwMoaU" title="Unreal progress video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
@@ -260,7 +266,7 @@
           <span class="stack">UE5 • CQB Level • Design & Systems</span>
         </header>
         <p>
-          I’m building a first‑person <strong>close‑quarters battle</strong> mission in a two‑story suburban home with a basement.
+          I’m building a first-person <strong>close-quarters battle</strong> mission in a two-story suburban home with a basement.
           The goal is to balance <em>realism</em> and <em>player choice</em>: multiple insertion routes, methodical room clearing,
           and a mix of stealth and action. Players navigate tight interiors, secure critical intel, and attempt a hostage
           rescue under pressure. The level emphasizes clear objectives, readable spaces, and cinematic pacing from approach
@@ -268,14 +274,14 @@
         </p>
         <p class="ue-docs">
           <a class="btn" href="assets/docs/Level_Design_Document_CQB.pdf" target="_blank" rel="noopener">Read the Level Design Document (PDF)</a>
-          <a class="btn" href="assets/docs/CQB_Game_Design.pdf" target="_blank" rel="noopener">View the Game Design deck (PDF)</a>
+          <a class="btn" href="assets/docs/CQB_Game_Design.pdf" target="_blank" rel="noopener">View the Game Design Deck (PDF)</a>
         </p>
       </article>
     </section>
 
     <!-- SKILLS -->
     <section id="skills" class="section">
-      <h2 class="section-title">technical skills</h2>
+      <h2 class="section-title">Technical Skills</h2>
       <div class="skills-grid">
         <div>
           <h3>Programming</h3>
@@ -312,7 +318,7 @@
 
     <!-- CONTACT -->
     <section id="contact" class="section">
-      <h2 class="section-title">contact</h2>
+      <h2 class="section-title">Contact</h2>
       <div class="contact-card">
         <p><strong>Email:</strong> <a href="mailto:sean.aminovs@gmail.com">sean.aminovs@gmail.com</a></p>
         <p><strong>Phone:</strong> <a href="tel:+14153174446">+1 (415) 317‑4446</a></p>
@@ -326,7 +332,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Sean Aminov • Built with HTML/CSS/JS • Hosted on GitHub Pages</p>
+    <p>© <span id="year"></span> Sean Aminov • Built With HTML/CSS/JS • Hosted On GitHub Pages</p>
   </footer>
 
   <!-- Lightbox -->
